--- a/scss/main.scss
+++ b/scss/main.scss
@@ -191,6 +191,8 @@ menu {
                 line-height: 46px;
                 text-indent: 15px;
                 transition: all .4s ease .1s; 
+                //font-weight: bold;
+                font-family: RobotoCondensed-Bold;
             }
             li:hover {
                 background: #ecf2f9;
