--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,28 +1,28 @@
  $text :#111;
 @font-face {
     font-family: "RobotoCondensed-Bold";
-    src: url("../fonts/RobotoCondensed-Bold.ttf");
+    src: url("../fonts/RobotoCondensed-Bold.ttf")  format('truetype');
 }
 //@font-face {
 //    font-family: "RobotoCondensed-BoldItalic";
-//    src: url("fonts/RobotoCondensed-BoldItalic.ttf");
+//    src: url("../fonts/RobotoCondensed-BoldItalic.ttf");
 //}
 //@font-face {
 //    font-family: "RobotoCondensed-Italic";
-//    src: url("fonts/RobotoCondensed-Italic.ttf");
+//    src: url("../fonts/RobotoCondensed-Italic.ttf");
 //}
 //@font-face {
 //    font-family: "RobotoCondensed-Light";
-//    src: url("fonts/RobotoCondensed-Light.ttf");
+//    src: url("../fonts/RobotoCondensed-Light.ttf");
 //}
 //@font-face {
 //    font-family: "RobotoCondensed-LightItalic";
-//    src: url("fonts/RobotoCondensed-LightItalic.ttf");
+//    src: url("../fonts/RobotoCondensed-LightItalic.ttf");
 //}
-//@font-face {
-//    font-family: "RobotoCondensed-Regular";
-//    src: url("../fonts/RobotoCondensed-Regular.ttf");
-//}
+@font-face {
+    font-family: "RobotoCondensed-Regular";
+    src: url("../fonts/RobotoCondensed-Regular.ttf")  format('truetype');
+}
 
 $w: 320px;
 $w480: 480px;
@@ -34,7 +34,6 @@ $s768:  $w768 - 74px;
 
 body {
     font-family: RobotoCondensed-Regular;
-    background: #eee;
     margin: 0;
     padding: 0;
     background: #ecf2f9;
@@ -197,7 +196,7 @@ menu {
                 text-indent: 15px;
                 transition: all .4s ease .1s; 
                 //font-weight: bold;
-                font-family: RobotoCondensed-Bold;
+                font-family: "RobotoCondensed-Bold";
             }
             li:hover {
                 background: #ecf2f9;
