--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -128,6 +128,11 @@ body {
             "text";
          }
          .text {
+
+             width: 360px;
+             padding: 30px;
+             background: white;
+             grid-area: text;
              h2 {
                  text-align: center;
              }
@@ -137,10 +142,12 @@ body {
                  text-transform: uppercase;
                  margin-top: 10px;
              }
-             width: 360px;
-             padding: 30px;
-             background: white;
-             grid-area: text;
+             a {
+                 width: 100%;
+                 text-align: center;
+                 display: inline-block;
+                 margin-top: 20px;
+             }
              @media(max-width: 768px) {
                  width: calc(480px - 60px) ;
                  margin: 0 auto;
