--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -85,52 +85,46 @@ body {
 .faded {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgba(0,0,0,0.7);
     z-index: 999;
     @media(max-width: 768px) {
-        display: none;
+        //display: none;
     }
 }
+
  .baraner {
-     width: 720px;
+     & * {
+         box-sizing: border-box;
+     }
+     max-width: 520px;
      height: 100vh;
      z-index: 9999;
      position: fixed;
-     left: calc(50% - 340px);
-     top: calc(50% - 320px);
+     left: calc(50% - 520px / 2 );
+     top: 120px;
      @media (max-width: $w480) {
-         width: calc(480px - 100px);
+         max-width: 100%;
+         left: calc(50% - $w480 / 2 );
      }
      @media (max-width: $w) {
-         width: $w;
+         max-width: $w;
+         left: calc(50% - $w / 2 );
          overflow: hidden;
      }
      @media(max-width: 768px) {
-         width: $w480;
-         min-width: 100vw;
-         height: 100vh;
-         min-height: 500px;
-         left: 0;
-         top: 0px;
-         position: absolute;
-         //overflow: auto;
+         max-width: 520px;
+         top: 60px;
      }
      .wrap {
-         width: 720px;
-         display: flex;
-         justify-content: stretch;
+         width: 100%;
          @media(max-width: 768px) {
-            width: 100%;
-            display: grid;
-            grid-template-areas:
-            "img"
-            "text";
+             width: 100%;
          }
          .text {
-
-             width: 360px;
+             margin-top: -3px;
              padding: 30px;
+             max-width:720px;
              background: white;
              grid-area: text;
              h2 {
@@ -149,13 +143,12 @@ body {
                  margin-top: 20px;
              }
              @media(max-width: 768px) {
-                 width: calc(480px - 60px) ;
-                 margin: 0 auto;
+                 max-width:520px;
              }
          }
          img {
-             width: 360px;
-             height: 640px;
+             width: 100%;
+             height: auto;
              grid-area: img;
              @media(max-width: 768px) {
                  width: 100%;
@@ -965,6 +958,10 @@ section.bottom {
          margin-left: 0;
          margin-top: 15px;
      }
+     .phone a {
+         text-decoration: none;
+         color: #252525;
+     }
      .back {
          left: -295px;
          top: 69px;
@@ -1069,8 +1066,7 @@ section.bottom {
          button.silver {
              background: #a6a6b1;
          }
-         button.gold {
-             background: #f4ac21;
+         button.gold {             background: #f4ac21;
          }
          button.diamond {
              background: #4169e1;
