--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -596,6 +596,24 @@ section.second{
             height: 649px;
             background-size: cover;
         }
+        button {
+            width: 388px;
+            height: 46px;
+            border:0;
+            outline:0;
+            background: #a45935;
+            font-family:RobotoCondensed-Bold;
+            color:white;
+            font-size: 18px;
+            cursor: pointer;
+            @media(max-width:$w768){
+                width: calc(100% + 22px + 22px) ;
+                margin-left: -22px;
+                height: 35px;
+                font-size: 14px;
+                margin-bottom: 20px;
+            }
+        }
     }
  .district {
      margin-left: 14px;
@@ -1207,6 +1225,9 @@ footer {
              }
              &.vk:before {
                  background: url(../img/vk.png) no-repeat;
+             }
+             &.tg:before {
+                 background: url(../img/tg_36.png) no-repeat;
              }
              &.mail:before {
                  background: url(../img/mail.png) no-repeat;
